[gd_scene load_steps=19 format=2]

[ext_resource path="res://main_scenes/Garage.gd" type="Script" id=1]
[ext_resource path="res://auxiliary_scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://gfx/map_select.png" type="Texture" id=3]
[ext_resource path="res://gfx/ships/Station.png" type="Texture" id=4]
[ext_resource path="res://gfx/ships/Fledgling.png" type="Texture" id=5]
[ext_resource path="res://gfx/ships/Buzzer.png" type="Texture" id=6]
[ext_resource path="res://gfx/ships/Lightning.png" type="Texture" id=7]
[ext_resource path="res://visitor.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=4]

default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=6]

default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=8]

default_font = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=10]

default_font = SubResource( 9 )

[node name="Garage" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Background" parent="." index="0" instance=ExtResource( 2 )]

[node name="selector" type="Sprite" parent="." index="1"]

position = Vector2( 42, 92 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="preview" type="Sprite" parent="." index="2"]

position = Vector2( 475, 124 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="ships" type="Node2D" parent="." index="3"]

_sections_unfolded = [ "Transform" ]

[node name="Station" type="Sprite" parent="ships" index="0"]

position = Vector2( 42, 92 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Fledgling" type="Sprite" parent="ships" index="1"]

position = Vector2( 124, 92 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Buzzer" type="Sprite" parent="ships" index="2"]

position = Vector2( 198, 92 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Lightning" type="Sprite" parent="ships" index="3"]

position = Vector2( 272, 92 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="ui" type="Container" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="label_name" type="Label" parent="ui" index="0"]

modulate = Color( 0.87451, 0.964706, 0.960784, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 330.0
margin_top = 10.0
margin_right = 630.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "Station"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[node name="label_description" type="RichTextLabel" parent="ui" index="1"]

modulate = Color( 0.87451, 0.964706, 0.960784, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 330.0
margin_top = 198.0
margin_right = 630.0
margin_bottom = 618.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 4 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "go back to the station"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="label_money" type="Label" parent="ui" index="2"]

modulate = Color( 0.87451, 0.964706, 0.960784, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 6 )
text = "$ 0"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility", "custom_fonts" ]

[node name="label_cost" type="Label" parent="ui" index="3"]

visible = false
modulate = Color( 0.156863, 0.8, 0.87451, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 330.0
margin_top = 104.0
margin_right = 630.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 8 )
text = "$ 0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="label_state" type="Label" parent="ui" index="4"]

visible = false
modulate = Color( 0.662745, 0.231373, 0.231373, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 330.0
margin_top = 134.0
margin_right = 630.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 10 )
text = "damaged"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]


